# libstoragemgmt-rust

./: Cargo.toml  Makefile  README.md
.circleci/: config.yml
docs/: aliases.js  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/lsm/: BatteryType.t.html  DiskLinkType.t.html  FileSystemSnapShot.t.html  InitiatorType.t.html  NfsAccess.t.html  NfsExport.t.html  PoolMember.t.html  TargetPort.t.html  VolumeCreateArgThinP.t.html  VolumeReplicateType.t.html  all.html  available_plugins.v.html  enum.BatteryType.html  enum.CachePolicy.html  enum.Capability.html  enum.DiskLinkType.html  enum.DiskType.html  enum.InitiatorType.html  enum.LsmError.html  enum.PoolMember.html  enum.PortType.html  enum.RaidType.html  enum.SystemMode.html  enum.VolumeCreateArgThinP.html  enum.VolumeReplicateType.html  fn.available_plugins.html  fn.size_bytes_2_size_human.html  fn.size_human_2_size_bytes.html  index.html  sidebar-items.js  size_bytes_2_size_human.v.html  struct.AccessGroup.html  struct.Battery.html  struct.BlockRange.html  struct.Capabilities.html  struct.Client.html  struct.Disk.html  struct.FileSystem.html  struct.FileSystemSnapShot.html  struct.NfsAccess.html  (+9 more)
docs/regex/: trait.Replacer.html
docs/regex_syntax/: struct.Lit.html
docs/serde_json/: enum.Value.html  fn.from_reader.html  fn.from_slice.html  fn.from_str.html  fn.from_value.html  fn.to_string.html  fn.to_string_pretty.html  fn.to_value.html  (+13 more)
src/: client.rs  data.rs  error.rs  ipc.rs  lib.rs  local_disk.rs  misc.rs
tests/: ci_test.sh  integration_test.rs
(+345 files in other folders)
