[package]
name = "libstoragemgmt-rust"
version = "0.0.1"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
repository = "https://github.com/libstorage/libstoragemgmt-rust"
readme = "README.md"
keywords = ["libstoragemgmt", "storage"]
categories = ["api-bindings"]
documentation = "https://libstorage.github.io/libstoragemgmt-rust/"

[lib]
name = "lsm"

[dependencies]
url = "1.5.1"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
regex = "0.2.2"
rand = "0.3.18"     # For integration tests only
